# devops-ai-toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_signature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
assets/: README.md
docs/: README.md  ai-providers.md  architecture.md  cli-guide.md  coding-standards.md  comparison.md  configuration.md  contributing.md  developer-guide.md  enterprise-plugins.md  examples.md  faq.md  getting-started.md  github-action.md  glossary.md  installation.md  knowledge-base.md  llm-providers.md  mcp-server.md  output-format.md  plugin-development.md  plugin-guide.md  plugin-marketplace.md  plugins.md  quickstart.md  release-process.md  rest-api-guide.md  roadmap.md  sdk-guide.md  security.md  supported-technologies.md  testing-guide.md  troubleshooting-guide.md  use-cases.md  vscode-extension.md  web-ui.md
examples/: README.md  api_client.py  batch_analyze.py  curl_examples.sh  sdk_quickstart.py  sdk_validate_manifest.py
sample_kubernetes/: crashloopbackoff_describe.txt  events.txt  oomkilled_status.txt
sample_openstack/: cinder_no_weighed_backends.txt  neutron_port_binding_failed.txt  nova_no_valid_host.txt
sample_terraform/: main_unbalanced.tf  provider_config.tf  state_lock_error.txt  unsupported_argument.txt
sample_yaml/: deployment_bad_practices.yaml  invalid_syntax.yaml  service.yaml  valid_deployment.yaml
src/devops_ai_toolkit/: __init__.py
src/devops_ai_toolkit/analysis/: __init__.py  assembly.py  engine.py
src/devops_ai_toolkit/analyzers/: __init__.py  base.py  manifest.py  registry.py  terraform.py
src/devops_ai_toolkit/api/: __init__.py  app.py  deps.py  plugins.py  schemas.py
src/devops_ai_toolkit/cli/: __init__.py  app.py  plugins.py  scaffold.py
src/devops_ai_toolkit/detectors/: __init__.py  matcher.py
src/devops_ai_toolkit/explainers/: __init__.py
src/devops_ai_toolkit/knowledge/: __init__.py  loader.py
src/devops_ai_toolkit/models/: __init__.py  analysis.py  enums.py  knowledge.py
src/devops_ai_toolkit/output/: __init__.py  console.py  serialize.py
src/devops_ai_toolkit/parsers/: __init__.py  terraform.py  yaml_docs.py
src/devops_ai_toolkit/plugins/: __init__.py  base.py  knowledge_backed.py  manager.py  metadata.py
src/devops_ai_toolkit/prompts/: __init__.py  enrichment.py
src/devops_ai_toolkit/providers/: __init__.py  _http.py  anthropic.py  (+6 more)
tests/: conftest.py  test_api.py  test_cli.py  test_engine.py  test_knowledge.py  test_matcher.py  test_models.py  test_plugin_api.py  test_plugin_cli.py  test_plugin_knowledge_backed.py  test_plugin_manager.py  test_plugin_metadata.py  test_providers.py  test_providers_azure.py  test_readonly_contract.py  test_scaffold.py  test_sdk.py  test_validators.py
(+55 files in other folders)
