[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops-ai-toolkit"
version = "0.1.0"
description = "AI-powered, read-only DevOps troubleshooting engine for logs, YAML, Terraform, Kubernetes, OpenStack and more — CLI, SDK and REST API on one shared analysis engine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "DevOps AI Toolkit", email = "hello@devopsaitoolkit.com" }]
keywords = [
    "devops", "ai", "sre", "troubleshooting", "incident-response",
    "kubernetes", "terraform", "docker", "openstack", "observability",
    "platform-engineering", "infrastructure-as-code", "log-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "requests>=2.32",
]

[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.30"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "httpx>=0.27",
    "types-pyyaml>=6.0",
    "types-requests>=2.32",
]
all = ["devops-ai-toolkit[api,dev]"]

[project.scripts]
devops-ai = "devops_ai_toolkit.cli.app:main"

[project.urls]
Homepage = "https://devopsaitoolkit.com"
Documentation = "https://github.com/devopsaitoolkit/devops-ai-toolkit/tree/main/docs"
Repository = "https://github.com/devopsaitoolkit/devops-ai-toolkit"
Issues = "https://github.com/devopsaitoolkit/devops-ai-toolkit/issues"
Blog = "https://devopsaitoolkit.com/blog"

[tool.hatch.build.targets.wheel]
packages = ["src/devops_ai_toolkit"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF", "N", "D"]
ignore = ["D203", "D213", "D401", "B008", "D105"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S"]
"examples/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["tests.*", "examples.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = ["integration: end-to-end tests across interfaces"]

[tool.coverage.run]
source = ["devops_ai_toolkit"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
